Fix capslock spacing

--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -76,3 +76,7 @@
     font-size: 16px;
 }
 
+#keyboard-state >*:not(:last-child) {
+    margin-right: 4px; 
+} 
+
